[gd_scene load_steps=2 format=3 uid="uid://bk6nqykvfgl67"]

[ext_resource type="Script" path="res://Scripts/lose_screen.gd" id="1_8ehhw"]

[node name="LoseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ehhw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Play Again" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Close" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Quit Game"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 688.0
offset_top = 266.0
offset_right = 1221.0
offset_bottom = 439.0

[node name="Loss Message" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]YOU LOSE[/center]"

[node name="Score" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]Kills[/center]"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play Again" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play Again" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play Again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
